Added schema details for all endpoints
